--- a/.github/workflows/signin.yml
+++ b/.github/workflows/signin.yml
@@ -37,4 +37,4 @@ jobs:
        pip install requests
     - name: Update paper list
       run: |
-        python qd.py ${{ secrets.username }} ${{ secrets.password }} ${{ secrets.answer }} ${{ secrets.dingdingtoken }} 
+        python qd.py ${{ secrets.username }} ${{ secrets.password }} ${{ secrets.answer }} ${{ secrets.dingtalk_token }} 
